# E-Rechnung-REST-API

./: .coverage  .flake8  .gitignore  CHANGELOG.md  MANUAL.de.md  MANUAL.md  README.de.md  README.md  main.py  pyproject.toml
src/e_rechnung/: export_xrechnung.py  export_zugferd.py  models.py  pdf_render.py  utils.py  validators.py
src/e_rechnung/api/: app.py  mapper.py  routes.py  schemas.py
templates/: invoice.css  invoice.html  xrechnung.xml
tests/: conftest.py  test_api.py  test_export_xrechnung.py  test_export_zugferd.py  test_mapper.py  test_utils.py  test_validators.py
tests/data/: beispiel.json  dummy.json
tmp/: linter.sh
